2012-01-13  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.3.5.

2011-12-26  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with merging entries. Entry IDs will never be different
	so don't warn the user (Bug 289346).
	* Fixed bug with Cancel not working in the Entry Merge dialog.

2011-12-17  Robby Stephenson  <robby@periapsis.org>

	* Refactored fetcher tests to check for network access before running
	* Updated Discogs fetcher to use API v2

2011-12-14  Robby Stephenson  <robby@periapsis.org>

	* Fixed importing of multi-line notes from Alexandria (Bug 289022).

2011-11-30  Robby Stephenson  <robby@periapsis.org>

	* Updated fetcher for Allocine.fr.

2011-10-28  Robby Stephenson  <robby@periapsis.org>

	* Added filter rules for dates before and after.

2011-10-13  Robby Stephenson  <robby@periapsis.org>

	* Fixed broken script for searching Dark Horse Comics.

2011-10-05  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug that always showed checkmark for boolean field values (Bug 283444).

2011-10-04  Robby Stephenson  <robby@periapsis.org>

	* Updated GCstar exporter to include images.

2011-09-27  Robby Stephenson  <robby@periapsis.org>

	* Added Amazon data sources for China, Spain, and Italy.

2011-09-24  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.3.4.

2011-09-18  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug when editing month in the date widget in KDE 4.7 (Bug 281365).

2011-08-30  Robby Stephenson  <robby@periapsis.org>

	* Fixed showing a doubled filter count (Bug 281082).

2011-08-21  Robby Stephenson  <robby@periapsis.org>

	* Added data source for Google Book search.

2011-07-23  Robby Stephenson  <robby@periapsis.org>

	* Updated filter rules to match against values without diacritics
	  for "Contains" criters (Bug 222400).

2011-07-20  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug in year from Douban.com data source.
	* Fixed TMDB search for multiple person results.
