@@ -25,13 +25,15 @@
 #ifndef TELLICO_IMAGEWIDGET_H
 #define TELLICO_IMAGEWIDGET_H
 
-#include <kurl.h>
+#include <KUrl>
+#include <KDialog>
 
 #include <QWidget>
 #include <QPixmap>
 #include <QPoint>
 #include <KService>
 #include <QDateTime>
+#include <QPointer>
 
 #include <config.h>
 
@@ -88,6 +90,7 @@ private slots:
   void slotEditImage();
   void slotEditMenu(QAction* action);
   void slotFinished();
+  void cancelScan(KDialog::ButtonCode code);
 
 private:
   void scale();
@@ -108,8 +111,10 @@ private:
   KProgressDialog* m_waitDlg;
   QDateTime m_editedFileDateTime;
 #ifdef HAVE_KSANE
-  KSaneIface::KSaneWidget* m_saneWidget;
-  KDialog* m_saneDlg;
+  QPointer<KSaneIface::KSaneWidget> m_saneWidget;
+  QPointer<KDialog> m_saneDlg;
+  QString m_saneDevice;
+  bool m_saneDeviceIsOpen;
 #endif
 };
 
